trying to fix project box issue on mobile

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -134,13 +134,12 @@ body{
   margin: 0;
 }
 .projects{
-  height:100vh;
   display: block;
   margin-top: auto;
 }
 .about{
   height:100vh;
-  display: block;
+  display: inline-block;
 }
 
 .social-media-footer.a{
